--- a/.github/workflows/build-linux-arm64.yml
+++ b/.github/workflows/build-linux-arm64.yml
@@ -36,7 +36,9 @@ jobs:
         run: |
           docker buildx create --use
           docker buildx build \
-            --platform linux/amd64,linux/arm64,windows/amd64,windows/arm64 \
+            --platform linux/amd64,linux/arm64 \
+            --build-arg TARGETOS=linux \
+            --build-arg TARGETARCH=amd64,arm64 \
             --output "type=local,dest=./build" \
             --progress plain \
             .
@@ -47,30 +49,22 @@ jobs:
         run: |
           mkdir -p ./build/linux_amd64
           mkdir -p ./build/linux_arm64
-          mkdir -p ./build/windows_amd64
-          mkdir -p ./build/windows_arm64
 
       - name: Move binaries to output directories
         run: |
-          mv ./build/linux_amd64/initiad ./build/initia_${GITHUB_REF#refs/tags/}/initiad || true
-          mv ./build/linux_arm64/initiad ./build/initia_${GITHUB_REF#refs/tags/}/initiad || true
-          mv ./build/windows_amd64/initiad.exe ./build/initia_${GITHUB_REF#refs/tags/}/initiad.exe || true
-          mv ./build/windows_arm64/initiad.exe ./build/initia_${GITHUB_REF#refs/tags/}/initiad.exe || true
+          mv ./build/linux_amd64/initiad ./build/linux_amd64/initiad || true
+          mv ./build/linux_arm64/initiad ./build/linux_arm64/initiad || true
 
       - name: Create tarballs
         run: |
           cd ./build
           tar -czvf initia_${GITHUB_REF#refs/tags/}_Linux_amd64.tar.gz linux_amd64
           tar -czvf initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz linux_arm64
-          tar -czvf initia_${GITHUB_REF#refs/tags/}_Windows_amd64.tar.gz windows_amd64
-          tar -czvf initia_${GITHUB_REF#refs/tags/}_Windows_arm64.tar.gz windows_arm64
 
       - name: Verify binary architecture
         run: |
           file ./build/linux_amd64/initiad || true
           file ./build/linux_arm64/initiad || true
-          file ./build/windows_amd64/initiad.exe || true
-          file ./build/windows_arm64/initiad.exe || true
 
       - name: Google Auth
         uses: 'google-github-actions/auth@v2'
@@ -86,8 +80,6 @@ jobs:
         run: |
           gsutil cp ./build/initia_${GITHUB_REF#refs/tags/}_Linux_amd64.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/
           gsutil cp ./build/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/
-          gsutil cp ./build/initia_${GITHUB_REF#refs/tags/}_Windows_amd64.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/
-          gsutil cp ./build/initia_${GITHUB_REF#refs/tags/}_Windows_arm64.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/
 
       - name: Verify upload and Generate public URL
         env:
@@ -103,20 +95,6 @@ jobs:
           if gsutil stat gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/initia_${GITHUB_REF#refs/tags}_Linux_arm64.tar.gz; then
             echo "File successfully uploaded"
             echo "Public URL: https://storage.googleapis.com/${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/initia_${GITHUB_REF#refs/tags}_Linux_arm64.tar.gz" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "File upload failed"
-            exit 1
-          fi
-          if gsutil stat gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/initia_${GITHUB_REF#refs/tags}_Windows_amd64.tar.gz; then
-            echo "File successfully uploaded"
-            echo "Public URL: https://storage.googleapis.com/${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/initia_${GITHUB_REF#refs/tags}_Windows_amd64.tar.gz" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "File upload failed"
-            exit 1
-          fi
-          if gsutil stat gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/initia_${GITHUB_REF#refs/tags}_Windows_arm64.tar.gz; then
-            echo "File successfully uploaded"
-            echo "Public URL: https://storage.googleapis.com/${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/initia_${GITHUB_REF#refs/tags}_Windows_arm64.tar.gz" >> $GITHUB_STEP_SUMMARY
           else
             echo "File upload failed"
             exit 1
