--- a/.github/workflows/build-linux-arm64.yml
+++ b/.github/workflows/build-linux-arm64.yml
@@ -7,64 +7,41 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 60
+    strategy:
+      matrix:
+        platform: [linux/amd64, linux/arm64, windows/amd64, windows/arm64]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Cache Go modules
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/go-build
-            /go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
 
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.22.4'
 
-      - name: Build Multi-Platform Binaries
+      - name: Build for ${{ matrix.platform }}
+        env:
+          GOOS: ${{ matrix.platform.split('/')[0] }}
+          GOARCH: ${{ matrix.platform.split('/')[1] }}
         run: |
-          docker buildx create --use
-          docker buildx build \
-            --platform linux/amd64,linux/arm64 \
-            --build-arg TARGETOS=linux \
-            --build-arg TARGETARCH=amd64,arm64 \
-            --output "type=local,dest=./build" \
-            --progress plain \
-            .
-          echo "Multi-platform build completed"
-          ls -al build/
-
-      - name: Create output directories
-        run: |
-          mkdir -p ./build/linux_amd64
-          mkdir -p ./build/linux_arm64
-
-      - name: Move binaries to output directories
-        run: |
-          mv ./build/linux_amd64/initiad ./build/linux_amd64/initiad || true
-          mv ./build/linux_arm64/initiad ./build/linux_arm64/initiad || true
+          echo "Building for GOOS=$GOOS and GOARCH=$GOARCH"
+          mkdir -p build/${GOOS}_${GOARCH}
+          go build -o build/${GOOS}_${GOARCH}/initiad ./cmd/initiad
 
       - name: Create tarballs
         run: |
-          cd ./build
-          tar -czvf initia_${GITHUB_REF#refs/tags/}_Linux_amd64.tar.gz linux_amd64
-          tar -czvf initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz linux_arm64
+          cd build
+          for dir in *; do
+            tar -czvf initia_${GITHUB_REF#refs/tags/}_${dir}.tar.gz ${dir}
+          done
 
       - name: Verify binary architecture
         run: |
           file ./build/linux_amd64/initiad || true
           file ./build/linux_arm64/initiad || true
+          file ./build/windows_amd64/initiad.exe || true
+          file ./build/windows_arm64/initiad.exe || true
 
       - name: Google Auth
         uses: 'google-github-actions/auth@v2'
@@ -78,24 +55,21 @@ jobs:
         env:
           GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
         run: |
-          gsutil cp ./build/initia_${GITHUB_REF#refs/tags/}_Linux_amd64.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/
-          gsutil cp ./build/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/
+          for file in ./build/*.tar.gz; do
+            gsutil cp ${file} gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/
+          done
 
       - name: Verify upload and Generate public URL
         env:
           GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
         run: |
-          if gsutil stat gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/initia_${GITHUB_REF#refs/tags}_Linux_amd64.tar.gz; then
-            echo "File successfully uploaded"
-            echo "Public URL: https://storage.googleapis.com/${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/initia_${GITHUB_REF#refs/tags}_Linux_amd64.tar.gz" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "File upload failed"
-            exit 1
-          fi
-          if gsutil stat gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/initia_${GITHUB_REF#refs/tags}_Linux_arm64.tar.gz; then
-            echo "File successfully uploaded"
-            echo "Public URL: https://storage.googleapis.com/${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/initia_${GITHUB_REF#refs/tags}_Linux_arm64.tar.gz" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "File upload failed"
-            exit 1
-          fi
+          for file in ./build/*.tar.gz; do
+            basename=$(basename ${file})
+            if gsutil stat gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/${basename}; then
+              echo "File successfully uploaded"
+              echo "Public URL: https://storage.googleapis.com/${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/${basename}" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "File upload failed"
+              exit 1
+            fi
+          done
