--- a/.github/workflows/build-linux-arm64.yml
+++ b/.github/workflows/build-linux-arm64.yml
@@ -1,76 +1,33 @@
-name: Build and Upload Multi-Platform Binaries
+name: Build and Upload ARM Binaries
 
 on:
   workflow_call:
 
 jobs:
-  build:
+  build-arm:
     runs-on: ubuntu-20.04
     timeout-minutes: 60
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Cache Go modules
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/go-build
-            /go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
-
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.22.4'
 
-      - name: Build Multi-Platform Binaries
+      - name: Build for arm64
         run: |
-          docker buildx create --use
-          docker buildx build \
-            --platform linux/amd64,linux/arm64 \
-            --output "type=local,dest=./build" \
-            --progress plain \
-            .
-          echo "Multi-platform build completed"
+          GOARCH=arm64 go build -o build/initiad ./cmd/initiad
+          echo "Build for arm64 completed"
           ls -al build/
 
-      - name: Create output directories
+      - name: Create output directory and tarball
         run: |
-          mkdir -p ./build/initia_${GITHUB_REF#refs/tags/}_amd64
           mkdir -p ./build/initia_${GITHUB_REF#refs/tags/}_arm64
-
-      - name: Move binaries to output directories
-        run: |
-          mv ./build/linux_amd64/initiad ./build/initia_${GITHUB_REF#refs/tags/}_amd64/initiad || true
-          mv ./build/linux_amd64/libmovevm.so ./build/initia_${GITHUB_REF#refs/tags/}_amd64/libmovevm.so || true
-          mv ./build/linux_amd64/libcompiler.so ./build/initia_${GITHUB_REF#refs/tags/}_amd64/libcompiler.so || true
-          mv ./build/linux_arm64/initiad ./build/initia_${GITHUB_REF#refs/tags/}_arm64/initiad || true
-          mv ./build/linux_arm64/libmovevm.so ./build/initia_${GITHUB_REF#refs/tags/}_arm64/libmovevm.so || true
-          mv ./build/linux_arm64/libcompiler.so ./build/initia_${GITHUB_REF#refs/tags/}_arm64/libcompiler.so || true
-
-      - name: Create tarballs
-        run: |
+          mv ./build/initiad ./build/initia_${GITHUB_REF#refs/tags/}_arm64/initiad
           cd ./build
-          tar -czvf initia_${GITHUB_REF#refs/tags/}_Linux_amd64.tar.gz initia_${GITHUB_REF#refs/tags/}_amd64
           tar -czvf initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz initia_${GITHUB_REF#refs/tags/}_arm64
-
-      - name: Verify binary architecture
-        run: |
-          file ./build/initia_${GITHUB_REF#refs/tags/}_amd64/initiad || true
-          file ./build/initia_${GITHUB_REF#refs/tags/}_amd64/libmovevm.so || true
-          file ./build/initia_${GITHUB_REF#refs/tags/}_amd64/libcompiler.so || true
-          file ./build/initia_${GITHUB_REF#refs/tags/}_arm64/initiad || true
-          file ./build/initia_${GITHUB_REF#refs/tags/}_arm64/libmovevm.so || true
-          file ./build/initia_${GITHUB_REF#refs/tags/}_arm64/libcompiler.so || true
 
       - name: Google Auth
         uses: 'google-github-actions/auth@v2'
@@ -84,20 +41,12 @@ jobs:
         env:
           GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
         run: |
-          gsutil cp ./build/initia_${GITHUB_REF#refs/tags/}_Linux_amd64.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/
           gsutil cp ./build/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/
 
       - name: Verify upload and Generate public URL
         env:
           GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
         run: |
-          if gsutil stat gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/initia_${GITHUB_REF#refs/tags}_Linux_amd64.tar.gz; then
-            echo "File successfully uploaded"
-            echo "Public URL: https://storage.googleapis.com/${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/initia_${GITHUB_REF#refs/tags}_Linux_amd64.tar.gz" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "File upload failed"
-            exit 1
-          fi
           if gsutil stat gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/initia_${GITHUB_REF#refs/tags}_Linux_arm64.tar.gz; then
             echo "File successfully uploaded"
             echo "Public URL: https://storage.googleapis.com/${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags}/initia_${GITHUB_REF#refs/tags}_Linux_arm64.tar.gz" >> $GITHUB_STEP_SUMMARY
